Used fixed header instead of position: sticky.
This gives much better browser support without any big changes.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 .header {
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 100;
     height: var(--header-height);
+    width: 100vw;
     display: grid;
     grid-template-columns: max-content auto minmax(auto, 400px);
     align-items: center;
