--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -44,6 +44,7 @@ body {
         'contact';
     grid-gap: 2rem;
     justify-content: center;
+    margin-top: var(--header-height);
 }
 
 .content > section {
