--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -80,7 +80,7 @@ section.intro {
 
 .center-bottom {
     position: absolute;
-    bottom: 1.7em;
+    bottom: 0;
     left: 50%;
     padding: 2em;
     transform: translateX(-50%);
