--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -19,6 +19,7 @@ html {
     /* Variables */
     --header-height: 60px;
     --header-offset: calc(1.7 * var(--header-height));
+    --content-offset: calc(1.34 * var(--header-height));
 }
 
 body {
@@ -53,7 +54,8 @@ body {
     margin: 0 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
     max-width: 1100px;
-    min-height: calc(100vh - var(--header-height));
+    /* NOTE: For testing purposes before content is ready. (Unless the scroll snap needs it) */
+    min-height: calc(100vh - var(--content-offset));
 }
 
 .content > section h2 {
