--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -30,6 +30,12 @@ section.intro {
     margin-bottom: 0;
 }
 
+.samuelLogo {
+    width: 20em;
+    height: 1.32em;
+    margin: 0.3em 0 0 0;
+}
+
 .content p {
     margin: 0;
 }
@@ -52,7 +58,7 @@ section.intro {
     right: 0.2em;
     display: flex;
     justify-content: space-between;
-    width: 2.8em;
+    width: 3.5em;
     align-items: flex-end;
 }
 
