Improve fallback font style if Google fonts fail.

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -36,8 +36,22 @@ section.intro {
     margin: 0.3em 0 0 0;
 }
 
+[data-scroll] {
+    transition: opacity 1s;
+}
+
+[data-scroll='in'] {
+    opacity: 1;
+}
+
+[data-scroll='out'] {
+    opacity: 0;
+}
+
 .content p {
     margin: 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 .intro-bg {
