--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -23,7 +23,8 @@
 }
 
 .header a {
-    font-family: 'Roboto', 'sans-serif';
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     font-size: 1.3em;
     text-decoration: none;
     color: #000;
