--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -35,12 +35,8 @@
     position: relative;
 }
 
-.header a:hover::before,
-.header a:active::before,
-.header a:hover::after,
-.header a:active::after {
-    display: flex;
-    justify-content: center;
+.header a::before,
+.header a::after {
     content: '';
     position: absolute;
     height: 2px;
@@ -48,19 +44,30 @@
     width: 90%;
     z-index: -10;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) scaleX(0);
+    transition: all 0.3s;
+}
+
+.header a::before {
+    top: 0.1em;
+    transform-origin: left;
+}
+
+.header a::after {
+    bottom: 0.1em;
+    transform-origin: right;
 }
 
 .header a:hover::before,
 .header a:active::before {
-    top: 0.1em;
     box-shadow: 0 0.5em 1em var(--accent-color);
+    transform: translateX(-50%) scaleX(1);
 }
 
 .header a:hover::after,
 .header a:active::after {
-    bottom: 0.1em;
     box-shadow: 0 -0.5em 1em var(--accent-color);
+    transform: translateX(-50%) scaleX(1);
 }
 
 .main-menu {
