--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,15 +2,35 @@
     position: fixed;
     top: 0;
     z-index: 100;
-    height: var(--header-height);
     width: 100vw;
+    display: grid;
+    justify-content: center;
+    background: transparent;
+    font-size: 1.2em;
+    color: white;
+    text-shadow: 1px 1px #000;
+}
+
+.header .container {
     display: grid;
     grid-template-columns: max-content minmax(auto, 400px);
     justify-content: space-between;
     align-items: center;
-    padding: 0 2rem;
+    width: 100vw;
+    max-width: var(--max-content-width);
+    padding: 2rem;
+}
+
+.header.scrolled {
     background: white;
+    padding: 0 2rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+    font-size: 1em;
+    height: var(--header-height);
+}
+
+.header.scrolled a {
+    color: #000;
 }
 
 .header img {
@@ -27,7 +47,7 @@
     font-weight: 300;
     font-size: 1.3em;
     text-decoration: none;
-    color: #000;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
