--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -40,7 +40,7 @@ body {
     padding: 2rem;
     margin: 0 2rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
-    max-width: 1100px;
+    max-width: var(--max-content-width);
     /* NOTE: For testing purposes before content is ready. (Unless the scroll snap needs it) */
     min-height: calc(100vh - var(--content-offset));
 }
