--- a/src/components/Layout/variables.module.css
+++ b/src/components/Layout/variables.module.css
@@ -7,6 +7,7 @@
 
     /* Variables */
     --header-height: 60px;
-    --header-offset: calc(1.7 * var(--header-height));
-    --content-offset: calc(1.34 * var(--header-height));
+    --header-offset: 100px;
+    --content-offset: 80px;
+    --max-content-width: 1100px;
 }
