--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -8,83 +8,12 @@ section.intro {
     max-width: none;
     color: #000;
     font-size: 1.4em;
-    padding-top: 6rem;
-    padding-left: 4rem;
     font-family: 'Roboto', 'sans-serif';
-
-    /*  This rotate3d is cooler than the rotate + skew transform,
-        but the latter has better browser support. */
-    /* --intro-bg-transform: rotate3d(4, 1, 1, 14deg); */
-    --intro-bg-transform: rotate(0.5deg) skew(-3deg, 3deg);
 }
 
-.content {
-    display: inline-block;
-    position: relative;
-    background: transparent;
-    z-index: 10;
-}
-
-.content h1 {
-    font-size: 2.6em;
-    margin-bottom: 0;
-}
-
-.samuelLogo {
-    width: 20em;
-    height: 1.32em;
-    margin: 0.3em 0 0 0;
-}
-
-.content p {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-}
-
-.intro-bg {
-    position: absolute;
-    background: transparent;
-    top: -0.5em;
-    left: -1em;
-    height: 130%;
-    width: 110%;
-    z-index: -1;
-    transform: var(--intro-bg-transform);
-    background: var(--orange);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-}
-
-.triangles-container {
-    position: absolute;
-    bottom: 0.2em;
-    right: 0.2em;
-    display: flex;
-    justify-content: space-between;
-    width: 3.5em;
-    align-items: flex-end;
-}
-
-.triangle {
-    z-index: -9;
-    content: '';
-    height: 0;
-    width: 0;
-}
-
-.t1 {
-    border-top: 1.1em solid #fff;
-    border-right: 1.1em solid transparent;
-}
-
-.t2 {
-    border-top: 0.8em solid #fff;
-    border-right: 0.8em solid transparent;
-}
-
-.t3 {
-    border-top: 0.5em solid #fff;
-    border-right: 0.5em solid transparent;
+.logo-container {
+    margin-top: 8rem;
+    margin-left: 4rem;
 }
 
 .center-bottom {
