--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -36,7 +36,7 @@
     transition: padding 0.3s ease;
 }
 
-.header.scrolled a {
+.header.scrolled a:not(.small-logo) {
     color: #000;
 }
 
@@ -45,11 +45,29 @@
 }
 
 .logo:hover::before,
-.logo:hover::after {
+.logo:hover::after,
+.small-logo:hover::before,
+.small-logo:hover::after {
     display: none !important;
 }
 
-.header a {
+.header .small-logo-wrapper {
+    height: 100%;
+}
+
+.header a.small-logo {
+    display: inline-flex;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+/* Disable logo link when not visible. */
+.header a.small-logo.disabled {
+    pointer-events: none;
+}
+
+.header a:not(.small-logo) {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 1.3em;
