--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -36,6 +36,7 @@ body {
 }
 
 .content > section {
+    position: relative;
     background: rgba(255, 255, 255, 0.97);
     padding: 2rem;
     margin: 0 2rem;
