--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,3 +1,31 @@
 .contact {
-    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* TODO: Remove when temporary Layout min height has been removed. */
+    min-height: 100px !important;
+}
+
+.links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 200px;
+    margin: 0 auto;
+}
+
+.links svg {
+    height: 35px;
+    width: 35px;
+}
+
+.links a {
+    display: flex;
+    align-content: center;
+    color: #000;
+    padding: 5px;
+}
+
+.links a:hover {
+    color: var(--orange);
 }
