Load projects data into component & show titles.
Added Swiper component to show projects easily.

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,3 +1,10 @@
 .projects {
     height: 400px;
 }
+
+.project-showcase {
+    max-width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+}
