--- a/src/components/Layout/variables.module.css
+++ b/src/components/Layout/variables.module.css
@@ -3,6 +3,8 @@
     --orange: #f49e4c;
     --marine-blue: #0f5a81;
     --light-blue: #d3e9ed;
+    --jet: #353535;
+    --bleu-de-france: #3c91e6;
     --accent-color: var(--orange);
 
     /* Variables */
