--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -2,3 +2,10 @@
     width: 100%;
     height: 100%;
 }
+
+.project-image {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
