--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -1,6 +1,19 @@
 .project {
     width: 100%;
     height: 100%;
+    display: grid;
+}
+
+.project-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2em;
+}
+
+.project-title h3 {
+    padding: 0.3em;
+    background: var(--orange);
 }
 
 .project-image {
