--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -2,6 +2,17 @@
     width: 100%;
     height: 100%;
     display: grid;
+    grid-template-areas:
+        'image'
+        'title'
+        'details';
+}
+
+.project-image {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .project-title {
@@ -16,9 +27,7 @@
     background: var(--orange);
 }
 
-.project-image {
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.project-details {
+    display: grid;
+    grid-template-areas: 'details description';
 }
