Improve project layout

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -30,4 +30,5 @@
 .project-details {
     display: grid;
     grid-template-areas: 'details description';
+    grid-template-columns: minmax(100px, 1fr) minmax(300px, 4fr);
 }
