Add hover styles for project nav buttons.

--- a/src/components/Layout/variables.module.css
+++ b/src/components/Layout/variables.module.css
@@ -5,6 +5,7 @@
     --light-blue: #d3e9ed;
     --jet: #353535;
     --bleu-de-france: #3c91e6;
+    --bleu-de-france-darker-shade: #3784d2;
     --accent-color: var(--orange);
 
     /* Variables */
