Improve layout for project slides.
Also use css variable for --project-image-height instead of hardcoding
the value.

--- a/src/components/Layout/variables.module.css
+++ b/src/components/Layout/variables.module.css
@@ -14,4 +14,5 @@
     --content-offset: 80px;
     --expanded-header-height: 120px;
     --max-content-width: 1100px;
+    --project-image-height: 400px;
 }
