--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -32,5 +32,54 @@
 .project-details {
     display: grid;
     grid-template-areas: 'details description';
-    grid-template-columns: minmax(100px, 1fr) minmax(300px, 3fr);
+    grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 3fr);
+}
+
+.project-sidebar {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, min-content);
+    justify-items: center;
+    text-align: center;
+}
+
+.year {
+    font-weight: 700;
+    font-size: 1.2em;
+}
+
+.project-sidebar ul {
+    list-style: none;
+    margin: 0.83rem 0;
+    width: 80%;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+}
+
+.project-sidebar li {
+    margin: 0.83rem 0;
+}
+
+.links {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 200px;
+    margin: 0 auto;
+}
+
+.links svg {
+    height: 25px;
+    width: 25px;
+}
+
+.links a {
+    display: flex;
+    align-content: center;
+    color: #000;
+    padding: 5px;
+}
+
+.links a:hover {
+    color: var(--orange);
 }
