--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -17,13 +17,16 @@
     width: 35px;
 }
 
-.links a {
+.links > a {
     display: flex;
     align-content: center;
     color: #000;
     padding: 5px;
+    transition: none;
 }
 
-.links a:hover {
+.links > a:hover {
     color: var(--orange);
+    background: none;
+    transition: none;
 }
