--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -73,13 +73,16 @@
     width: 25px;
 }
 
-.links a {
+.links > a {
     display: flex;
     align-content: center;
     color: #000;
     padding: 5px;
+    transition: none;
 }
 
-.links a:hover {
+.links > a:hover {
     color: var(--orange);
+    background: none;
+    transition: none;
 }
