Improve alignment for project sidebar.

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -41,6 +41,7 @@
     grid-template-rows: repeat(3, min-content);
     justify-items: center;
     text-align: center;
+    padding-top: 1rem;
 }
 
 .year {
