--- a/src/components/SamuelLogo/SamuelLogo.module.css
+++ b/src/components/SamuelLogo/SamuelLogo.module.css
@@ -2,20 +2,27 @@
     display: inline-block;
     position: relative;
     background: transparent;
+    z-index: 2;
 }
 
 .samuel-logo h1 {
+    position: relative;
     font-size: 2.6em;
     margin-bottom: 0;
+    z-index: 3;
 }
 
 .samuel-logo p {
+    position: relative;
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    z-index: 3;
 }
 
 .logo {
+    position: relative;
+    z-index: 3;
     width: 20em;
     height: 1.32em;
     margin: 0.3em 0 0 0;
@@ -23,12 +30,11 @@
 
 .logo-bg {
     position: absolute;
-    background: transparent;
     top: -0.5em;
     left: -1em;
     height: 130%;
     width: 110%;
-    z-index: -1;
+    z-index: 1;
     background: var(--orange);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
 
