--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -78,6 +78,12 @@ body {
     transition: all 0.3s ease;
 }
 
+@media screen and (max-width: 600px) {
+    .content > section {
+        width: 100vw;
+    }
+}
+
 /* Improve site accesibility */
 @media (prefers-reduced-motion: reduce) {
     html {
