Improve Project layout for small screens.

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -2,10 +2,6 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-areas:
-        'image'
-        'title'
-        'details';
     grid-template-rows: min-content 3rem auto;
     gap: 1rem;
 }
@@ -31,7 +27,6 @@
 
 .project-details {
     display: grid;
-    grid-template-areas: 'details description';
     grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 3fr);
 }
 
@@ -70,8 +65,9 @@
 }
 
 .links svg {
-    height: 25px;
-    width: 25px;
+    --icon-size: 25px;
+    height: var(--icon-size);
+    width: var(--icon-size);
 }
 
 .links > a {
@@ -86,4 +82,20 @@
     color: var(--orange);
     background: none;
     transition: none;
+}
+
+@media screen and (max-width: 600px) {
+    .project-details {
+        grid-template-columns: 1fr;
+        grid-template-rows: min-content min-content;
+    }
+
+    .project-sidebar {
+        padding: 0;
+        margin-bottom: 0.83rem;
+    }
+
+    .links svg {
+        --icon-size: 35px;
+    }
 }
