--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -124,3 +124,13 @@
 .no-transition {
     transition: none !important;
 }
+
+@media screen and (max-width: 400px) {
+    .header .container {
+        padding: 2rem 0;
+    }
+
+    .header.scrolled .container {
+        padding: 0;
+    }
+}
