--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -125,6 +125,16 @@
     transition: none !important;
 }
 
+@media screen and (max-width: 600px) {
+    .header .container {
+        padding: 2rem 1rem;
+    }
+
+    .header.scrolled .container {
+        padding: 0 1rem;
+    }
+}
+
 @media screen and (max-width: 400px) {
     .header .container {
         padding: 2rem 0;
