--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -82,6 +82,7 @@ body {
 @media screen and (max-width: 600px) {
     .content > section {
         width: 100vw;
+        padding: 2rem 1rem;
     }
 }
 
