--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -22,12 +22,14 @@
 
 .project-title h3 {
     padding: 0.3em;
+    margin: 0;
     background: var(--orange);
 }
 
 .project-details {
     display: grid;
     grid-template-columns: minmax(min-content, 1fr) minmax(min-content, 3fr);
+    gap: 2rem;
 }
 
 .project-sidebar {
@@ -47,7 +49,7 @@
 .project-sidebar ul {
     list-style: none;
     margin: 0.83rem 0;
-    width: 80%;
+    width: 100%;
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
 }
@@ -60,7 +62,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 200px;
+    width: 10rem;
     margin: 0 auto;
 }
 
@@ -88,6 +90,7 @@
     .project-details {
         grid-template-columns: 1fr;
         grid-template-rows: min-content min-content;
+        gap: 0;
     }
 
     .project-sidebar {
