Add slight padding to Skills on small screens.

--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -25,3 +25,9 @@
     height: 100%;
     border-radius: 2px;
 }
+
+@media screen and (max-width: 600px) {
+    .skills-container {
+        padding: 0 1rem;
+    }
+}
