Re-enable overscroll-behavior-y for browser reload

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    overscroll-behavior: none;
+    overscroll-behavior-x: none;
 }
 
 *,
