--- a/src/components/Layout/variables.module.css
+++ b/src/components/Layout/variables.module.css
@@ -6,6 +6,7 @@
     --jet: #353535;
     --bleu-de-france: #3c91e6;
     --bleu-de-france-darker-shade: #3784d2;
+    --link-blue: #21507e;
     --bone-white: #fcfcfc;
     --accent-color: var(--orange);
 
