Make SamuelLogo responsive.
Bonus: this stops the fixed header from behaving weird on mobile!

Also remove unused CSS.

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -27,3 +27,22 @@ a.center-bottom:hover {
     transition: none;
     background: none;
 }
+
+@media screen and (max-width: 600px) {
+    .logo-container {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .logo-container {
+        transform: scale(0.8);
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .logo-container {
+        transform: scale(0.7);
+    }
+}
