--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,6 +10,7 @@
     color: white;
     text-shadow: 1px 1px #000;
     transition: padding 0.3s ease, height 0.3s ease;
+    padding-top: env(safe-area-inset-top);
 }
 
 .header .container {
