--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -12,6 +12,8 @@ html {
 
 body {
     margin: 0;
+    padding: 0 env(safe-area-inset-right) env(safe-area-inset-bottom)
+        env(safe-area-inset-left);
 }
 
 .layout {
