--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -65,6 +65,7 @@ body {
     justify-content: center;
     align-content: center;
     padding: 1rem;
+    color: #fff;
     white-space: nowrap;
 }
 
