--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -1,6 +1,8 @@
 section.intro {
     margin: 0;
     padding: 0;
+    display: grid;
+    justify-items: center;
     height: calc(100vh - var(--header-height));
     position: relative;
     background: transparent;
@@ -16,11 +18,8 @@ section.intro {
 }
 
 a.center-bottom {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    padding: 2em;
-    transform: translateX(-50%);
+    align-self: end;
+    padding-bottom: 2rem;
 }
 
 a.center-bottom:hover {
