--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -19,7 +19,6 @@ section.projects {
 .nav-button {
     padding: 0;
     border: 0;
-    cursor: pointer;
     background: var(--bleu-de-france);
     width: 3rem;
     height: 3rem;
@@ -61,4 +60,14 @@ section.projects {
 
 .nav-button.prev:hover > svg {
     transform: translateX(-8%);
+}
+
+@media screen and (max-width: 400px) {
+    .nav-buttons {
+        padding: 0;
+    }
+
+    .nav-button::before {
+        display: none;
+    }
 }
