--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -129,8 +129,12 @@
 }
 
 @media screen and (max-width: 600px) {
+    .header {
+        --expanded-header-height: 80px;
+    }
+
     .header .container {
-        padding: 2rem 0.5rem;
+        padding: 1rem 0.5rem;
     }
 
     .header.scrolled .container {
@@ -147,7 +151,7 @@
 
 @media screen and (max-width: 400px) {
     .header .container {
-        padding: 2rem 0;
+        padding: 1rem 0;
     }
 
     .header.scrolled .container {
