Improve media query to disable mobile transitions.
Hover media query is activated on devices without primary input device with
hover support - e.g. touch devices, which often have worse performance.

This simplifies the regular max-width breakpoints.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -142,13 +142,6 @@
     }
 }
 
-@media screen and (max-width: 500px) {
-    .header,
-    .header .container {
-        transition: none !important;
-    }
-}
-
 @media screen and (max-width: 400px) {
     .header .container {
         padding: 1rem 0;
@@ -156,5 +149,12 @@
 
     .header.scrolled .container {
         padding: 0;
+    }
+}
+
+@media screen and (hover: none) {
+    .header,
+    .header .container {
+        transition: none !important;
     }
 }
