Fix clickable area for mobile menu.

--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -42,13 +42,12 @@
     height: 100%;
     width: 100%;
     z-index: -1;
-    padding-top: 20vh;
     background: var(--bone-white);
 }
 
 .items ul {
     list-style: none;
-    margin: 0;
+    margin: 20vh 0 0 0;
 }
 
 .items li {
