Decrease top intro logo margin for small screens.

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -38,3 +38,9 @@ a.center-bottom:hover {
         justify-self: center;
     }
 }
+
+@media screen and (max-height: 500px) {
+    .logo-container {
+        margin-top: 4rem;
+    }
+}
