--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,19 @@
         background-attachment: fixed;
         background-size: cover;
     }
+    #bg {
+        position: fixed;
+        z-index: -2;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+    }
+
+    #bg img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @tailwind components;
