--- a/src/global.css
+++ b/src/global.css
@@ -1,21 +1,13 @@
 @tailwind base;
-
-@layer base {
-    #bg {
-        position: fixed;
-        z-index: -2;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-    }
-
-    #bg img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-
 @tailwind components;
 @tailwind utilities;
+
+@media (prefers-reduced-motion: reduce) {
+    *,
+    *::before,
+    *::after {
+        transition-duration: 0.01ms !important;
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+    }
+}
