--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,56 @@
 @tailwind base;
+
+@layer base {
+    :root {
+        --pacificBlue: '#46B4C7';
+        --ming: '#256D7A';
+        --cedarChest: '#C76350';
+        --mantis: '#5AC75F';
+        --fernGreen: '#3D7A40';
+        --white: '#fff';
+        --honeydew: '#D6EAD7';
+        --black: '#000';
+    }
+}
+
 @tailwind components;
+
+@layer components {
+    .link,
+    .prose .link {
+        position: relative;
+        text-decoration: none;
+        line-height: 1;
+        z-index: 0;
+        color: var(--black);
+        display: inline-block;
+        overflow: hidden;
+        padding: 0.25rem;
+        vertical-align: bottom;
+    }
+
+    .link::before,
+    .prose .link::before {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        content: ' ';
+        display: inline-block;
+        transform: translateY(calc(100% - 2px));
+        background-image: linear-gradient(60deg, #46b4c7 0%, #5ac75f 100%);
+        transition: transform 0.2s ease-out;
+    }
+
+    .link:hover::before,
+    .prose .link:hover::before {
+        transform: translateY(0);
+        transition: transform 0.2s ease-out;
+    }
+}
+
 @tailwind utilities;
 
 @media (prefers-reduced-motion: reduce) {
