--- a/src/global.css
+++ b/src/global.css
@@ -2,14 +2,14 @@
 
 @layer base {
     :root {
-        --pacificBlue: '#46B4C7';
-        --ming: '#256D7A';
-        --cedarChest: '#C76350';
-        --mantis: '#5AC75F';
-        --fernGreen: '#3D7A40';
-        --white: '#fff';
-        --honeydew: '#D6EAD7';
-        --black: '#000';
+        --pacificBlue: #46B4C7;
+        --ming: #256D7A;
+        --cedarChest: #C76350;
+        --mantis: #5AC75F;
+        --fernGreen: #3D7A40;
+        --white: #fff;
+        --honeydew: #D6EAD7;
+        --black: #000;
     }
 }
 
@@ -25,8 +25,7 @@
         color: var(--black);
         display: inline-block;
         overflow: hidden;
-        padding: 0.25rem;
-        vertical-align: bottom;
+        padding: .5rem;
     }
 
     .link::before,
@@ -40,7 +39,7 @@
         content: ' ';
         display: inline-block;
         transform: translateY(calc(100% - 2px));
-        background-image: linear-gradient(60deg, #46b4c7 0%, #5ac75f 100%);
+        background: var(--mantis);
         transition: transform 0.15s ease-out;
     }
 
