--- a/src/global.css
+++ b/src/global.css
@@ -59,6 +59,10 @@
 
 @tailwind utilities;
 
+html {
+    overflow-y: scroll;
+}
+
 @media (prefers-reduced-motion: reduce) {
     *,
     *::before,
