--- a/src/global.css
+++ b/src/global.css
@@ -25,10 +25,11 @@
         padding: 2px 4px;
         border-radius: 4px;
         margin-right: 1px;
-        line-height: 1.5rem;
+        line-height: 1.4em;
         word-break: break-word;
         white-space: nowrap;
         font-weight: 500;
+        font-size: 0.8em;
 
         &::before,
         &::after {
