--- a/src/global.css
+++ b/src/global.css
@@ -69,6 +69,12 @@
         text-decoration: none;
     }
 
+    .prose h2 code,
+    .prose h3 code,
+    .prose h4 code {
+        color: white;
+    }
+
     &:hover {
         background-size: 2px 100%;
     }
