--- a/src/global.css
+++ b/src/global.css
@@ -42,6 +42,16 @@
             content: '';
         }
     }
+
+    .prose blockquote {
+        /* Disable adding quote marks to block-quotes: https://github.com/tailwindlabs/tailwindcss-typography/issues/66 */
+        p {
+            &:first-of-type::before,
+            &:last-of-type::after {
+                content: none;
+            }
+        }
+    }
 }
 
 @utility link {
